# baseball_broadcast_board

./: .gitignore  package-lock.json  package.json
public/js/: board.js  operation.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src-tauri/src/server/: mod.rs  persistence.rs  protocol.rs  state.rs
src-tauri/src/server/handlers/: init_data.rs  mod.rs  websocket.rs
